# youtube_download

./: .gitignore  README.md
backend/: main.py  requirements.txt
frontend/: next.config.js  package-lock.json  package.json  swagger.config.js
frontend/src/app/: page.tsx
frontend/src/app/api-docs/: page.tsx
frontend/src/app/api/download/: route.ts
frontend/src/app/api/formats/: route.ts
frontend/src/app/api/progress/: route.ts
frontend/src/app/api/select_directory/: route.ts
frontend/src/app/components/: DownloadProgress.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
