[package]
name = "youtube-downloader"
version = "1.0.0"
description = "A YouTube video downloader desktop application"
authors = ["Your Name"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
# 使用与 tauri 预发布版本相匹配的 tauri-build 版本
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# 使用合适的 tauri 版本
tauri = { version = "2.0.5", features = [
    "window",            # Basic window features
    "shell-execute",     # For executing the Python backend
    "system-tray",       # If you need system tray functionality
] }

tauri-plugin-dialog = "2.0.0-alpha.2"
tauri-plugin-fs = "2.0.0-alpha.2"
tauri-plugin-process = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-http = "2.0.0-alpha.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s" 
